# munnir

./: .env.example  .gitignore  README.md  docker-compose.yml  docs.md
.claude/skills/ai-data/: SKILL.md
.claude/skills/backend/: SKILL.md
.claude/skills/cpp-engine/: SKILL.md
.claude/skills/domain/: SKILL.md
.claude/skills/frontend/: SKILL.md
cpp_engine/: CMakeLists.txt
cpp_engine/include/munnir_engine/: hello.hpp  pnl.hpp  position.hpp  risk.hpp
cpp_engine/src/: bindings.cpp
cpp_engine/src/math/: hello.cpp  pnl.cpp  position.cpp  risk.cpp
cpp_engine/tests/: test_hello.cpp  test_pnl.cpp  test_position.cpp  test_risk.cpp
munnir-api/: Dockerfile  alembic.ini  pyproject.toml
munnir-api/alembic/: env.py
munnir-api/alembic/versions/: 6c8348f00e17_add_users_and_trading_sessions.py  a1b2c3d4e5f6_add_server_defaults.py  b3c4d5e6f7a8_add_news_and_signals.py  c4d5e6f7a8b9_add_trades_and_positions.py
munnir-api/app/: main.py
munnir-api/app/api/: dependencies.py
munnir-api/app/api/v1/: router.py
munnir-api/app/api/v1/endpoints/: auth.py  execution.py  hello.py  news.py  sessions.py  users.py
munnir-api/app/core/: config.py  database.py  security.py
munnir-api/app/models/: __init__.py  hello.py  news_article.py  position.py  trade.py  trade_signal.py  trading_session.py  user.py
munnir-api/app/schemas/: execution.py  hello.py  news_article.py  position.py  trade.py  trade_signal.py  trading_session.py  user.py
munnir-api/app/services/: ai_analyst.py  auth.py  engine.py  execution.py  news.py  price_feed.py  scheduler.py  sessions.py  slippage.py
munnir-api/tests/: conftest.py  test_ai_analyst.py  test_auth.py  test_engine.py  test_execution.py  test_execution_endpoints.py  test_hello.py  test_news.py  test_price_feed.py  test_schemas.py  test_sessions.py  test_slippage.py
munnir-ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml
munnir-ui/src/: index.html  styles.css
munnir-ui/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
munnir-ui/src/app/core/guards/: auth.guard.spec.ts
munnir-ui/src/app/core/interceptors/: auth.interceptor.spec.ts  auth.interceptor.ts
munnir-ui/src/app/core/models/: auth.model.ts  execution.model.ts  hello.model.ts  position.model.ts  session.model.ts  signal.model.ts  trade.model.ts
munnir-ui/src/app/core/services/: api.service.spec.ts  api.service.ts  auth.service.spec.ts  auth.service.ts  execution.service.ts  session.service.spec.ts  session.service.ts  theme.service.spec.ts  theme.service.ts  widget-order.service.ts
munnir-ui/src/app/features/auth/: login.component.spec.ts  login.component.ts  register.component.spec.ts  register.component.ts
munnir-ui/src/app/features/dashboard/: dashboard.component.spec.ts  dashboard.component.ts
munnir-ui/src/app/features/hello/: hello.component.spec.ts  hello.component.ts
munnir-ui/src/assets/i18n/: cs.json  en.json
(+4 files in other folders)
